Fix carousel z-index w/ mobile nav open on client

--- a/client/src/components/common/Carousel/Carousel.module.scss
+++ b/client/src/components/common/Carousel/Carousel.module.scss
@@ -53,7 +53,7 @@
   // prevent overlay from blocking swipe on mobile
   pointer-events: none;
 
-  z-index: 10;
+  z-index: 5;
   width: 100%;
 
   // full height controls
